Fix segfaults by revamping error-handling method
1. Error-handling due to bad user input is now handled using error codes instead of exception.
	- Various input-related exceptions have been reimplemented as `Error` and its subclasses.
	- `Error` is stored by a `ErrorCode` until it has been processed and cleared using the `ErrorCode::clear()` member function.
	- All functions using `ErrorCode` should return (ala stack unwinding) if they do not intend to deal with the error.

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ build/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+calculator.code-workspace
 
 # Debug Files
 .debug_time
