Silence segfault from `NumTypePattern` and minor changes
1. Update member-function-pointers to ISO standard
2. Untrack `launch.json`
3. Minor changes -- when program ends, newline will be printed
4. Fixed missing return value in `Error`

--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,9 @@ build/
 
 # VSCode Settings
 .vscode/*
+.vscode/launch.json
 !.vscode/settings.json
 !.vscode/tasks.json
-!.vscode/launch.json
 !.vscode/extensions.json
 calculator.code-workspace
 
