Set up Sphinx and Breathe for use in documenting
Set up various things needed to run Sphinx and Breathe.

Set up a virtualenv with Sphinx and Breathe, activate it and then run `make docs` to create documentation, which can then be found at `docs/_build/html/`.

--- a/.gitignore
+++ b/.gitignore
@@ -50,4 +50,10 @@ calculator.code-workspace
 *.core
 
 # Doxygen-generated files
-docs/
+docs/*
+!docs/src/
+!docs/Doxyfile
+!docs/Makefile
+!docs/make.bat
+
+pyenv/
