Add script to build and test (`bnt.sh`) and put it in `.vscode/tasks.json`.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,7 +23,18 @@
             "args": [
                 "docs"
             ]
-        }
+        },
+        {
+            "type": "process",
+            "label": "build and test",
+            "command": "scripts/bnt.sh"
+        },
+        {
+            "type": "shell",
+            "label": "run test",
+            "command": "bin/test/tester",
+            "args": []
+        },
     ],
     "version": "2.0.0"
 }
